--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,3 @@
-aiohttp==3.7.2
-fastapi==0.61.1
-fastapi-utils==0.2.1
-pydantic[email]==1.6.1
-starlette==0.13.6
-uvicorn[standard]==0.12.1
-structlog==20.1.0
-python-json-logger==2.0.1
-requests==2.25.0
-websockets
-tenacity==6.3.1
+fastapi-websocket-rpc
 broadcaster==0.2.0
 asyncpg==0.21.0
