--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,15 @@ jobs:
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9]
+    
+    services:
+      postgres:
+        image: postgres:alpine
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
+        ports:
+        - 5432:5432
 
     steps:
     - uses: actions/checkout@v2
