--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 fastapi-websocket-rpc>=0.1.24,<1
-permit-broadcaster[redis,postgres,kafka]==0.2.4
+permit-broadcaster[redis,postgres,kafka]>=0.2.5,<3
 pydantic>=1.9.1,<2
 websockets>=10.3,<11
