--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 fastapi-websocket-rpc>=0.1.25,<1
 packaging>=20.4
 permit-broadcaster[redis,postgres,kafka]>=0.2.5,<3
-pydantic>=1.9.1
+pydantic>=2.1.1,<3
 websockets>=10.3,<11
